# CCONTROL-M

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README-COMANDOS.txt  README-PROD.md  README.md  RESUMO_SERVICOS.md  comando_personalizado.ps1  desligar_motores.cmd  diagnostico.ps1  docker-compose.yml  iniciar-projeto.bat  iniciar-projeto.ps1  ligar_motores.cmd  ligar_os_motores.bat  start_dev.bat  start_dev.cmd  start_dev.ps1  start_frontend.ps1  start_prod.ps1  start_win.ps1  test_fastapi.py  test_import.py
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_REFACTORING.md  app_fornecedores.py  app_teste.py  create_test_token.py  debug_server.py  docker-compose.prod.yml  fixed_main.py  main.py  mini_app.py  mini_main.py  openapi-output.json  pyproject.toml  pytest.ini  requirements.txt  run_server.py  start_backend.bat  start_dev.bat  start_dev.ps1  start_prod.sh  start_win.ps1  super_simple.py  test_imports.py  test_schemas.py  test_schemas_simples.py  test_server.py  test_simple.py  test_simple_server.py  teste_config.py
backend/app/: database.py  debug_api.py  dependencies.py  main.py  start_win.ps1  test_server.py
backend/docs/: API_LANCAMENTOS.md  STYLE_GUIDE.md  TESTE_LANCAMENTOS.md  database_policies.md  multi_tenancy.md  reports.md
backend/migrations/: env.py
backend/scripts/: apply_rls.py  apply_unified_rls.py  check_rls.py  database_backup.py  list_tables.py  reorganize_tests.py  supabase_rls.sql  test_multitenancy.py  test_supabase_multitenancy.py
backend/tests/: PLANO_REFATORACAO_TESTES.md  README.md  (+34 more)
(+435 files in other folders)
